Pin versions and correct lib ver + root Cmake

--- a/examples/app_xu316_i2s_loopback/CMakeLists.txt
+++ b/examples/app_xu316_i2s_loopback/CMakeLists.txt
@@ -4,8 +4,8 @@ project(app_xu316_i2s_loopback)
 
 set(APP_HW_TARGET               xk-audio-316-mc.xn)
 
-set(APP_DEPENDENT_MODULES       lib_board_support
-                                lib_i2s)
+set(APP_DEPENDENT_MODULES       "lib_board_support(1.0.0)"
+                                "lib_i2s(5.1.0)")
 
 set(APP_COMPILER_FLAGS          -Os
                                 -g
