--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,3 +3,4 @@ include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
 project(lib_board_support)
 add_subdirectory(app_xu316_i2s_loopback)
 add_subdirectory(app_evk_316_simple_c)
+add_subdirectory(app_xu316_mc_simple_c)
