--- a/examples/app_xk_audio_316_mc_simple_c/CMakeLists.txt
+++ b/examples/app_xk_audio_316_mc_simple_c/CMakeLists.txt
@@ -4,7 +4,7 @@ project(app_xu316_mc_simple_c)
 
 set(APP_HW_TARGET                   xk-audio-316-mc.xn)
 
-set(APP_DEPENDENT_MODULES           "lib_board_support(1.0.0)")
+include(../deps.cmake)
 
 set(APP_COMPILER_FLAGS              -Os
                                     -g
