--- a/settings.yml
+++ b/settings.yml
@@ -2,7 +2,7 @@
 
 lib_name: lib_board_support
 project: '{{lib_name}}'
-title: '{{lib_name}}: XMOS Board Support'
+title: '{{lib_name}}: XMOS board support'
 version: 1.1.0
 
 documentation:
