Remove example dependency on lib_i2s

--- a/examples/app_xk_audio_316_mc_simple_c/CMakeLists.txt
+++ b/examples/app_xk_audio_316_mc_simple_c/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.21)
 include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
-project(app_xu316_mc_simple_c)
+project(app_xk_audio_316_mc_simple_c)
 
 set(APP_HW_TARGET                   xk-audio-316-mc.xn)
 
