Add example to test build

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -4,3 +4,4 @@ project(lib_board_support)
 add_subdirectory(app_xk_audio_316_mc_simple_xc)
 add_subdirectory(app_evk_316_simple_c)
 add_subdirectory(app_xk_audio_316_mc_simple_c)
+add_subdirectory(app_xk_voice_l71_simple_c)
